--- a/templates/base.html
+++ b/templates/base.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-              <html lang="en">
+<html lang="en">
 
-              <head>
-                <meta charset="UTF-8">
-                <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                <title >Car Space</title>
-                <link rel="shortcut icon" href="{{ url_for('static', filename='car logo.ico') }}">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Car Space</title>
+  <link rel="shortcut icon" href="{{ url_for('static', filename='car logo.ico') }}">
 
-                <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-                  integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-                <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/mainpage.css') }}">
-                <script src="https://kit.fontawesome.com/d0a0a409f1.js" crossorigin="anonymous"></script>
-              </head>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/mainpage.css') }}">
+  <script src="https://kit.fontawesome.com/d0a0a409f1.js" crossorigin="anonymous"></script>
+</head>
 
-              <body>
+<body>
 
-                <nav class="navbar navbar-expand-lg navbar-light sticky-top navbar-dark navbar-custom ">
+  <!-- <nav class="navbar navbar-expand-lg navbar-light navbar-dark navbar-custom ">
 
                             <a class="navbar-brand" href="#">
                             <i class="fa-solid fa-car-tunnel"></i>
@@ -28,16 +28,16 @@
 
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav mr-auto navbar-center">
-                            <li class="nav-item active">
+                            <li >
                                 <a class="nav-link" href="/">Sell <span class="sr-only"></span></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="buy">Buy</a>
                             </li>
 
-                            <li class="nav-item">
+                             <li class="nav-item">
                                 <a class="nav-link" href="#">Admin/Stats</a>
-                            </li>
+                            </li> 
                             <li class="nav-item">
                                 <a class="nav-link" href="#Contact-us-section">Contact Us</a>
                             </li>
@@ -48,60 +48,153 @@
 
                             </ul>
                         </div>
-                </nav>
-
-                <!-- <nav>
-
-                    <ul class="horizontal-list text-center nav-menu">
-                        <li>
-                            <a href="#"> Home </a>
-                        </li>
-                        <li>
-                            <a href="#about"> About </a>
-                        </li>
-                        <li>
-                            <a href="#skills"> Skills </a>
-                        </li>
-                        <li>
-                            <a href="#experience">Experience</a>
-                        </li>
-                        <li>
-                            <a href="#education">Education</a>
-                        </li>
-                        <li>
-                            <a href="#portfolio">Portfolio</a>
-                        </li>
-                        <li>
-                            <a href="#contact">Contact</a>
-                        </li>
-                    </ul>
-        
                 </nav> -->
+
+                <nav>
+
+                  <div class="buy-sell-nav">
+
+
+
+      <ul class="horizontal-list text-center nav-custom">
         
+          <div style="position: absolute;left:5%">
 
-{% block body %}
-    
-{% endblock body %}
+         
+        <a class="navbar-brand" href="#" >
+          <i class="fa-solid fa-car-tunnel" ;></i>
+          CarSpace
+      </a>
+     </div>
 
-<!-- Section: Contact v.2-->
-<section class="contact-form-custom" id="Contact-us-section">
+
+
+        <li style="border: 3px solid blue;">
+          <!-- <button type="submit"> -->
+          <a class="nav-custom-link" href="/#Sell-form"> 
+            <span>
+          Predict Car Price
+         </span>
+         </a>
+        
+          <!-- </button> -->
+        </li>
+        <li style="border: 3px solid blue;">
+          <!-- <button type="submit"> -->
+          <a class="nav-custom-link" href="buy">
+          <span>
+            Buy a Car
+          </span>
+          </a>
+          <!-- </button> -->
+        </li>
+
+        <li style="position: absolute; right:8.5%;top:3%;background-color: antiquewhite;width: 50px;border-radius: 20px;">
+          <i class="fa-solid fa-phone fa-2x" ></i>
+        </li>
+        <!-- style="transform: translate(30px,100px);" -->
+         <li id="nav-contact-us">
+          <!-- ContactUs -->
+          <a class="nav-custom-link" href="#Contact-us-section">
+            <p>
+               Contact Us
+            </p>
+            <p style="margin-top: -20px;">
+              95609111XX
+            </p>
+            </a>
+   </li>
+   </ul>
+
+  
+
+
+  </div>
+</nav>
+
+
+ 
+
+ 
+
+
+
+
+  <div clas="Image-slider-body">
+    <!--image slider start-->
+    <div class="slider">
+      <div class="slides">
+        <!--radio buttons start-->
+        <input type="radio" name="radio-btn" id="radio1">
+        <input type="radio" name="radio-btn" id="radio2">
+        <input type="radio" name="radio-btn" id="radio3">
+        <input type="radio" name="radio-btn" id="radio4">
+        <!--radio buttons end-->
+        <!--slide images start-->
+        <div class="slide first">
+          <img src="../static/styles/car bg 2.jpg" alt="">
+        </div>
+        <div class="slide">
+          <img src="../static/styles/car bg 3.jpg" alt="">
+        </div>
+        <div class="slide">
+          <img src="../static/styles/car bg.jpg" alt="">
+        </div>
+        <div class="slide">
+          <img src="../static/styles/car bg 4.jpg" alt="">
+        </div>
+        <!--slide images end-->
+        <!--automatic navigation start-->
+        <div class="navigation-auto">
+          <div class="auto-btn1"></div>
+          <div class="auto-btn2"></div>
+          <div class="auto-btn3"></div>
+          <div class="auto-btn4"></div>
+        </div>
+        <!--automatic navigation end-->
+      </div>
+      <!--manual navigation start-->
+      <div class="navigation-manual">
+        <label for="radio1" class="manual-btn"></label>
+        <label for="radio2" class="manual-btn"></label>
+        <label for="radio3" class="manual-btn"></label>
+        <label for="radio4" class="manual-btn"></label>
+      </div>
+      <!--manual navigation end-->
+    </div>
+    <!--image slider end-->
+  </div>
+
+  {% block body %}
+
+  {% endblock body %}
+
+  <!-- Section: Contact v.2-->
+  <section class="contact-form-custom" id="Contact-us-section">
 
     <!--Section heading-->
     <h2 class="h1-responsive font-weight-bold text-center my-4 ">Contact us</h2>
     <!--Section description-->
-    <p class="text-center w-responsive mx-auto ">Do you have any questions? Please do not hesitate to contact us directly. Our team will come back to you within
-        a matter of hours to help you.</p>
+    <p class="text-center w-responsive mx-auto ">Do you have any questions? Please do not hesitate to contact us
+      directly. Our team will come back to you within
+      a matter of hours to help you.</p>
 
 
     <ul class="list-inline">
-        <li class="list-inline-item location"><i class="fas fa-map-marker-alt fa-2x list-inline-item"></i><p>Delhi, Kalkaji 94126, India</p></li>
-        <li class="list-inline-item phoneno"><i class="fas fa-phone mt-4 fa-2x list-inline-item"></i><p>+91 95609111XX</p> </li>
-        <li class="list-inline-item email-id "><i class="fas fa-envelope mt-4 fa-2x list-inline-item"></i><p>contact@carstore.com</p></li>
+      <li class="list-inline-item location"><i class="fas fa-map-marker-alt fa-2x list-inline-item"></i>
+        <p>Delhi, Kalkaji 94126, India</p>
+      </li>
+      <li class="list-inline-item phoneno"><i class="fas fa-phone mt-4 fa-2x list-inline-item"></i>
+        <p>+91 95609111XX</p>
+      </li>
+      <li class="list-inline-item email-id "><i class="fas fa-envelope mt-4 fa-2x list-inline-item"></i>
+        <p>contact@carstore.com</p>
+      </li>
     </ul>
 
 
 
-<!-- <div class="page-content page-container" id="page-content">
+    <!-- <div class="page-content page-container" id="page-content">
     <div class="padding">
         <div class="row container d-flex justify-content-center">
 
@@ -123,61 +216,76 @@
              </div>
               </div>
             </div> -->
-      <!-- </div> -->
+    <!-- </div> -->
 
-            <div class="text-center social-icons" id="Social-media-section">
+    <div class="text-center social-icons" id="Social-media-section">
 
-              <ul class="horizontal-list">
+      <ul class="horizontal-list">
+        <h4>Reach Out to Owner</h4>
 
-                  <li>
-                      <a href="https://www.linkedin.com/in/manisha-khattar-b5663641/">
-                          <i class="fab fa-linkedin-in" aria-hidden="true"></i>
-                      </a>
-                  </li>
+        <li>
+          <a href="https://www.linkedin.com/in/parth-kumar-4690b2203/" aria-label="Linkedin link" target="_blank">
+            <i class="fab fa-linkedin-in" aria-hidden="true"></i>
+          </a>
+        </li>
 
-                  <li>
-                      <a href="https://stackoverflow.com/users/5608414/manisha?tab=profile" target="_blank">
-                          <i class="fab fa-stack-overflow" aria-hidden="true"></i>
-                      </a>
-                  </li>
+        <li>
+          <a href="https://stackoverflow.com/users/15138304/parth-kumar" aria-label="Gmail link" target="_blank">
+            <i class="fab fa-stack-overflow" aria-hidden="true"></i>
+          </a>
+        </li>
 
-                  <li>
-                      <a href="https://plus.google.com/u/0/103030702784925512939" target="_blank">
-                          <i class="fab fa-google-plus-g" aria-hidden="true"></i>
-                      </a>
-                  </li>
+        <li>
+          <a href="mailto:parth.4316403220@ipu.ac.in" aria-label="Gmail link" aria-label="facebook link"
+            target="_blank">
+            <i class="fab fa-google-plus-g" aria-hidden="true"></i>
+          </a>
+        </li>
 
-                  <li>
-                      <a href="https://www.facebook.com/manishakhattar54">
-                          <i class="fab fa-facebook-f" aria-hidden="true"></i>
-                      </a>
-                  </li>
+        <li>
+          <a href="https://www.facebook.com/parth.bansal.397/" aria-label="Gmail link" target="_blank">
+            <i class="fab fa-facebook-f" aria-hidden="true"></i>
+          </a>
+        </li>
 
-                  <li>
-                      <a href="https://www.quora.com/profile/Manisha-Khattar" target="_blank">
-                          <i class="fab fa-quora" aria-hidden="true"></i>
-                      </a>
-                  </li>
-              </ul>
-          </div>
-        </section>
-
-
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
-integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
-crossorigin="anonymous"></script>
+        <li>
+          <a href="https://www.quora.com/profile/Parth-Bansal-84" aria-label="Quora link" target="_blank">
+            <i class="fab fa-quora" aria-hidden="true"></i>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </section>
 
 
+
+
+  <!-- 
+<script type="text/javascript">
+  var counter = 1;
+  setInterval(function () {
+    document.getElementById('radio' + counter).checked = true;
+    counter++;
+    if (counter > 4) {
+      counter = 1;
+    }
+  }, 5000);
+</script> -->
+
+
+
+  
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+    integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+    crossorigin="anonymous"></script>
 
 </body>
-<!-- <script src="{{ url_for('static',filename='styles/index.js') }}"></script> -->
-
-
 
 </html>
