--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Car Space</title>
-  <link rel="shortcut icon" href="{{ url_for('static\styles', filename='car logo.ico') }}">
+  <link rel="shortcut icon" href="{{ url_for('static', filename='car logo.ico') }}">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -260,7 +260,7 @@
 
 
 
-  <!-- 
+  
 <script type="text/javascript">
   var counter = 1;
   setInterval(function () {
@@ -270,7 +270,7 @@
       counter = 1;
     }
   }, 5000);
-</script> -->
+</script>
 
 
 
